--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,3 +250,99 @@ footer {
 	font-size:10px;
 	padding: 25px;
 }
+
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 980px){
+
+.header-1 {
+	background-color: #4aaaa5;
+	color: #ffffff;
+	width: 175px;
+	height: 65px;
+	margin-left: 117px;
+	font-size: 14px;
+	text-align: center;
+	padding: 10px;
+	font-family: "Georgia", Times, Times New Roman, serif;
+	float: left;
+}
+
+.links {
+	float: right;
+	margin-top: 30px;
+	margin-right: 275px;
+}
+
+.ul-1 {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    color: #a1a6af;
+/* Need to figure out how to change font size */
+}
+
+.left-box {
+	background-color: #FFFFFF;
+	width: 378px;
+	height: 759px;
+	margin-left: 117px;
+	margin-top: 35px;
+	margin-bottom: 35px;
+	border-style: solid;
+	border-color: #a9a9a9;
+	border-width: 1px;
+}
+
+.first-hr {
+	width: 322px;
+	color: #a9a9a9;
+}
+
+.aside {
+	background-color: #FFFFFF;
+	width: 240px;
+	height: 183px;
+	float: right;
+	margin-top: 35px;
+	margin-left: 25px;
+	text-align: center;
+	border-style: solid;
+	border-color: #a9a9a9;
+	border-width: 1px;
+
+}
+
+.second-hr {
+	width: 189px;
+	color: #a9a9a9;
+}
+
+#bio-pic {
+	width: 320px;
+	margin-left: 25px;
+	margin-right: 25px;
+	float: left;
+	padding-top: 25px;
+	padding-bottom: 25px;
+}
+
+h2 {
+	font-family:"Georgia", Times, Times New Roman, serif;
+	padding-top: 15px;
+	margin-left: 25px;
+	font-size: 30px
+	color: #4aaaa5;
+}
+
+
+}
+
+
+
+@media screen and (max-width: 768px) {}
+
+
+
+@media screen and (max-width: 640px) {}
