--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+
+
+/*CSS FOR INDEX*/
+
+.header-span {
+	display: flex;
+}
+
 .header-1 {
 	background-color: #4aaaa5;
 	color: #ffffff;
@@ -8,7 +16,6 @@
 	text-align: center;
 	padding-top: 10px;
 	font-family: "Georgia", Times, Times New Roman, serif;
-	float: left;
 }
 
 h2 {
@@ -58,6 +65,7 @@ a {
 	color: #a9a9a9;
 }
 
+
 .bio-paragraph { 
 	margin-left: 25px;
 	margin-right: 25px;
@@ -74,11 +82,15 @@ a {
 }
 
 .links {
-	float: right;
 	margin-top: 30px;
-	margin-right: 175px;
+	margin-left: 500px;
 	
 
+}
+
+.contact-links {
+	margin-top: 30px;
+	margin-left: 500px;
 }
 
 
@@ -90,11 +102,8 @@ a {
 }
 
 
-
-
 .content {
 	display: flex;
-	flex-wrap: wrap;
 	clear: both;
 	background-image: url("../images/background.png");
 	border-top-style: solid;
@@ -116,6 +125,14 @@ a {
 	border-width: 1px;
 }
 
+/*CSS FOR CONTACT PAGE*/
+
+.contact-hr {
+	width: 600px;
+	color: #a9a9a9;
+
+}
+
 .contact-box {
 	background-color: #FFFFFF;
 	width: 650px;
@@ -128,6 +145,34 @@ a {
 	border-width: 1px;
 
 }
+
+.form {
+	margin-left: 25px;
+	color: #9f9eae;
+	font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
+	margin-top: 25px;
+}
+
+#form-name, #form-email, #form-message {
+	width: 595px;
+}
+
+#form-message {
+	height: 165px;
+
+}
+
+.submit-button {
+	background-color: #4aaaa5;
+	border: none;
+	width: 95px;
+	height: 35px;
+	color: #FFFFFF;
+	font-weight: normal;
+}
+
+/*CSS FOR PORTFOLIO PAGE*/
+
 
 .portfolio-box {
 	background-color: #FFFFFF;
@@ -143,48 +188,24 @@ a {
 }
 
 
-.form {
-	margin-left: 25px;
-	color: #9f9eae;
-	font-family: "Arial", "Helvetica Neue", Helvetica, sans-serif;
-	margin-top: 25px;
-}
-
-#form-name, #form-email, #form-message {
-	width: 595px;
-}
-
-/*Need assistance getting cursor to top of message box*/
-#form-message {
-	height: 165px;
-
-}
-
-.submit-button {
-	background-color: #4aaaa5;
-	border: none;
-	width: 95px;
-	height: 35px;
-	color: #FFFFFF;
-	font-weight: normal;
-}
-
 .third-hr {
 	width: 500px;
+
+}
+
+.portfolio-links {
+	margin-top: 30px;
+	margin-left: 399px;
 
 }
 
 .box-flex {
 	display: flex;
 	flex-wrap: wrap;
-	margin-left: 38px;
-	margin-right: 30px;
-	margin-top: 20px;
-	margin-bottom: 20px;
+	padding: 10px;
 }
 
 #box-1, #box-2, #box-3, #box-4, #box-5 {
-	width: 215px;
 	height: 150px;
 	background-color: black;
 	margin: 10px;
@@ -254,95 +275,360 @@ footer {
 
 /* MEDIA QUERIES */
 
-@media screen and (max-width: 980px){
+@media screen and (max-width: 980px) {
 
-.header-1 {
-	background-color: #4aaaa5;
-	color: #ffffff;
-	width: 175px;
-	height: 65px;
-	margin-left: 117px;
-	font-size: 14px;
-	text-align: center;
-	padding: 10px;
-	font-family: "Georgia", Times, Times New Roman, serif;
-	float: left;
+/*CSS FOR INDEX PAGE*/
+
+	.header-1 {
+		width: 175px;
+		height: 65px;
+		margin-left: 117px;
+		font-size: 14px;
+		padding: 10px;
+	}
+
+	.links {
+		margin-left: 200px;
+	}
+
+	.left-box {
+		width: 378px;
+		height: 759px;
+		margin-left: 117px;
+	}
+
+	.first-hr {
+		width: 322px;
+	}
+
+	.aside {
+		width: 240px;
+		height: 183px;
+		margin-left: 25px;
+	}
+
+	.second-hr {
+		width: 189px;
+		color: #a9a9a9;
+	}
+
+	#bio-pic {
+		width: 320px;
+		padding-top: 25px;
+		padding-bottom: 25px;
+	}
+
+/*CSS FOR CONTACT PAGE*/
+
+
+	.contact-box {
+		width: 415px;
+		height: 604px;
+		margin-left: 117px;
+	}
+
+	#form-name, #form-email, #form-message {
+		width: 320px;
+	}
+
+	.contact-hr {
+		width: 370px;
+	}
+
+	.contact-links {
+		margin-top: 30px;
+		margin-left: 235px;
+	}
+
+/*CSS FOR PORTFOLIO PAGE*/
+
+	.portfolio-box {
+		width: 369px;
+		height: 1555px;
+		margin-left: 90px;
+	}
+
+	.portfolio-links {
+		margin-left: 169px;
+
+	}
+
+	#box-1, #box-2, #box-3, #box-4, #box-5 {
+		width: 100%;
+		height: 229px;
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+
+	#box-1 {
+		background-image: url("https://placeimg.com/304/229/tech");
+	}
+
+	#box-2 {
+		background-image: url("https://placeimg.com/304/229/arch");
+	}
+
+	#box-3 {
+		background-image: url("https://placeimg.com/304/229/animals");
+	}
+
+	#box-4 {
+		background-image: url(https://placeimg.com/304/229/nature);
+	}
+
+	#box-5 {
+		background-image: url("https://placeimg.com/304/229/any");
+	}
+
+	.banner {
+		width: 100%;
+		height: 40px;
+		margin-top: 175px;
+		color: #ffffff;
+		font-size: 20px;
+		line-height: 40px
+	}
+
+	.third-hr {
+		width: 325px;
+
+	}
+
+	a {
+		font-size: 18px;
+
+	}
 }
 
-.links {
-	float: right;
-	margin-top: 30px;
-	margin-right: 275px;
+@media screen and (max-width: 768px) {
+	
+/*CSS FOR INDEX PAGE*/
+
+	.header-1{
+		margin-left: 22px;
+		font-size: 14px;
+	}
+
+	.content {
+		flex-wrap: wrap;
+	}
+
+
+	.left-box {
+		margin-left: 22px;
+		width: 598px;
+		height: 450px;
+		display: block;
+	}
+
+	a {
+		font-size: 16px
+		
+	}
+
+	#bio-pic {
+		width: 291px;
+		height: 219px;
+		padding-top: 15px;
+	}
+
+	.first-hr {
+		width: 550px;
+		color: #a9a9a9;
+	}
+	
+	
+	h2 {
+		font-size: 28px;
+	}
+
+	.aside {
+		display: block;
+		background-color: #FFFFFF;
+		width: 598px;
+		height: 150px;
+		margin-top: 0px;
+		margin-left: 22px;
+		margin-bottom: 25px;
+		text-align: left;
+	}
+	
+
+	h3 {
+		margin-left: 25px;
+		margin-bottom: 15px;
+	}
+
+	.second-hr{
+		width: 550px;
+	}
+
+	.image-links {
+		margin-top: 15px;
+		margin-left: 22px;
+	}
+
+/*CSS FOR CONTACT PAGE*/
+
+	.contact-box {
+		width: 598px;
+		height: 530px;
+		margin-left: 22px;
+	}
+
+
+	.contact-hr {
+		width: 560px;
+	}
+
+	#form-name, #form-email, #form-message {
+		width: 545px;
+	}
+
+	
+/*CSS FOR PORTFOLIO PAGE*/
+	
+	.portfolio-box {
+		width: 598px;
+		height: 856px;
+		margin-left: 22px;
+	}
+
+	.third-hr {
+		width: 580px;
+	}
+
+	#box-1, #box-2, #box-3, #box-4, #box-5 {
+		width: 250px;
+		height: 200px;
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+
 }
 
-.ul-1 {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    color: #a1a6af;
-/* Need to figure out how to change font size */
+@media screen and (max-width: 640px) {
+
+/*CSS FOR INDEX PAGE*/
+
+	.header-span {
+		flex-wrap: wrap;
+		margin-bottom: 20px;
+	}
+
+	.header-1 {
+		width: 640px;
+		margin: 0px;
+	}
+
+
+	.left-box {
+		width: 470px;
+		height: 750px;
+		margin-left: 75px;
+
+	}
+
+	.first-hr {
+		max-width: 415px;
+		margin-left: 22px;
+	}
+
+	#bio-pic {
+		width: 415px;
+		height: 315px;
+	}
+
+	.bio-paragraph {
+		max-width: 425px;
+	}
+
+	.aside {
+		width: 470px;
+		margin-left: 75px
+
+	}
+
+	.second-hr {
+		width: 450px;
+	}
+
+	.links {
+		max-width: 100%;
+		margin-left: 60px;
+		word-spacing: 140px
+	}
+
+	.content {
+		max-width: 640px;
+	}
+
+/*CSS FOR CONTACT PAGE*/
+
+	.contact-box {
+		width: 470px;
+		margin-left: 75px
+	}
+	
+
+	.header-span {
+		flex-wrap: wrap;
+		margin-bottom: 20px;
+	}
+
+	.header-1 {
+		width: 640px;
+		margin: 0px;
+	}
+
+	.contact-links {
+		max-width: 100%;
+		margin-left: 60px;
+		word-spacing: 140px
+
+	}
+
+	.contact-hr {
+		width: 425px;
+	}
+
+	#form-name, #form-email, #form-message {
+		width: 425px;
+	}
+
+/*CSS FOR PORTFOLIO PAGE*/
+
+	.portfolio-links {
+		max-width: 100%;
+		margin-left: 60px;
+		word-spacing: 140px
+	}
+
+	#box-1, #box-2, #box-3, #box-4, #box-5 {
+		width: 450px;
+		height: 340px;
+		background-size: cover;
+		background-repeat: no-repeat;
+	}
+
+	.portfolio-box {
+		width: 470px;
+		height: 1945px;
+		margin-left: 75px
+	}
+
+	.third-hr {
+		width: 425px;
+	}
+
+	.banner {
+		margin-top: 280px;
+	}
+
 }
 
-.left-box {
-	background-color: #FFFFFF;
-	width: 378px;
-	height: 759px;
-	margin-left: 117px;
-	margin-top: 35px;
-	margin-bottom: 35px;
-	border-style: solid;
-	border-color: #a9a9a9;
-	border-width: 1px;
-}
 
-.first-hr {
-	width: 322px;
-	color: #a9a9a9;
-}
 
-.aside {
-	background-color: #FFFFFF;
-	width: 240px;
-	height: 183px;
-	float: right;
-	margin-top: 35px;
-	margin-left: 25px;
-	text-align: center;
-	border-style: solid;
-	border-color: #a9a9a9;
-	border-width: 1px;
-
-}
-
-.second-hr {
-	width: 189px;
-	color: #a9a9a9;
-}
-
-#bio-pic {
-	width: 320px;
-	margin-left: 25px;
-	margin-right: 25px;
-	float: left;
-	padding-top: 25px;
-	padding-bottom: 25px;
-}
-
-h2 {
-	font-family:"Georgia", Times, Times New Roman, serif;
-	padding-top: 15px;
-	margin-left: 25px;
-	font-size: 30px
-	color: #4aaaa5;
-}
 
 
 }
-
-
-
-@media screen and (max-width: 768px) {}
-
-
-
-@media screen and (max-width: 640px) {}
